--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -2,5 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 * {
-    /* outline: 1px solid red; for debugd/ */
+    /* outline: 1px solid red; */
 }
